--- a/FACTIUNN.tex
+++ b/FACTIUNN.tex
@@ -4,6 +4,7 @@
 \hbadness=100000
 \documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath,amsfonts,changepage,caption,float,geometry,graphicx,mathtools,pythonhighlight,textcomp,url,verbatim} %,parskip
+\usepackage[justification=centering]{subfig}
 \geometry{ a4paper, total={170mm,257mm}, left=20mm, top=20mm}
 
 \newcommand{\matr}[1]{\underline{\underline{\textbf{#1}}}}
@@ -14,22 +15,9 @@
 \inputpython{#2}{1}{1500}
 \end{adjustwidth}
 }
-
-\newcommand{\singlepic}[4][H]{
-\begin{figure}[#1]
-\centering
-\includegraphics[#2]{#3}
-\caption{#4} \label{#3}
-\end{figure}
-}
-
-\newcommand{\doublepic}[6][H]{
-\begin{figure}[#1]
-\centering
-\includegraphics[#2]{#3}
-\includegraphics[#4]{#5}
-\caption{#6} \label{#3}
-\end{figure}
+\newcommand{\fluenceandactivities}[1]{
+\includegraphics[width=11cm]{#1fluence.png}
+\includegraphics[width=5cm]{#1activities.png}
 }
 \usepackage[toc, page]{appendix}
 % \usepackage[dvipsnames]{xcolor}
@@ -288,6 +276,29 @@ Some programs, such as GRAVEL and SAND-II, simply start their iterative solution
 
     \subsection{Neural Networks} \label{Neural Network Theory}
     Neuralnetworks, on the other hand, minimizes the chi square during the training phase by changing the parameters in the function itself, and therefore uses MORE information available, to solve the problem of an underdetermined thingy., though in a way that's a bit wishy washy?
+    
+    \begin{figure}
+    \centering
+    \includegraphics[height=5cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/SimpleNNArchitecture.png}
+    \caption{structure of a typical neural network} \label{SimpleNNArchitecture}
+    \end{figure}
+
+    \begin{figure}
+    \centering
+    \includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/ReLU.png}
+    \caption{A ReLU function (a rectifying function). Function input=x-axis; function output=y-axis.}\label{ReLU}
+    \end{figure}
+    A ReLU function (Figure~\ref{ReLU}) is typically used as the non-linear activation function $\sigma$, as it is one of the simplest and therefore fastest non-linear activation function to compute.
+
+    \begin{figure}
+    \centering
+    \includegraphics[height=5cm]{PPT/UniversalApproximationTheorem}
+    \subfloat[$R$ is an alias for the ReLU function (see Figure~\ref{ReLU}), and $y$ is the output layer neuron's activation value, obtained by summing over the product of the activation of the $i^{th}$ neuron $s_i$ with the weight of its connection to the final layer, $w_i$.] {\hspace{\linewidth}}
+    \caption{A cubic function approximated by a neural network with 1 hidden layer containing 6 neurons.}\label{UniversalApproximationTheorem}
+    \end{figure}
+    Figure~\ref{fig:} Is a crude representation of how a 1-hidden-layer neural network can approximate a cubic function. A single hidden layer neural network with one scalar input and one scalar output is able to approximate any non-linear functions, provided that there are enough input and output neurons.
+    (Explain adjusting bias leads to offset, and weights changes the slope, etc...)
+    (Talk more about how this is a scalar func, not a vector field, etc. And interpolation is good, extrapolation is bad.)
     \subsubsection{Universal approximation theory}
     \begin{enumerate}
         \item general theory of neural network, and it's problems:
@@ -364,25 +375,116 @@ Previous attempts of machine learning techniques applied to unfolding only inclu
 Therefore the neural network approach to unfolding the few-channel case is entirely new.
 
 \section{Initial attempt on parameterised code}
-For the simple 5x5 case, did pretty well. 
+For the simple 5$\times$5 case, did perfectly well.
 
-But once we take log of both sides, it's become an impossible problem because we can't take log of a matrix that's singular.
+But once we take log of both sides, it's become an impossible problem because we can't take log of a matrix that's singular. See Figure~\ref{5x5}.
+
+\begin{figure}
+\centering
+\includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/13simple_log.png}
+\includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/14simple_log.png}\\
+\includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/15simple_log.png}
+\includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/16simple_log.png}
+\caption{The spectra predicted from results of training a 2-hidden-layers neural network (with 16 nodes per layer) } \label{5x5}
+% See /home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/simplecase/log_simple_2_layer_error_variation.png for training progress graph
+\end{figure}
+
+% list of all spectra plotted together /home/ocean/Documents/GitHubDir/unfolding/AllSpec.png
+
+\begin{figure}
+\centering
+\includegraphics[height=4cm]{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/demogenerator/6_JET_FW_parametrised_spectrum_approximation_.png}
+\includegraphics[height=7cm]{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/_256_256_mse_training_spectra.png}
+\caption{On the left is an example of parametrisation performed on the JET spectra. These flux values are the total flux inside each energy bin, NOT divided by the lethargy span of each bin, so they are scaled up/down by larger/smaller bins. Despite the lack of smoothness after plotting these spectra, the Neural network was still able to identify and replicate the covariance between neighbouring channels.\\
+On the right is an example of ...[expansion needed], plotted according to their neutron flux per unit lethargy.}\label{Parametrisation}
+\end{figure}
+
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/simulated_data/lossabove1e1/0918_0207_2_layer_256_256_mse_test_262_}
+\caption{The neural network excels at approximating a JET First Wall  spectrum after being trained on variants of the same spectrum (only with slighly different peak heights), along with the perturbed spectra of 6 other fusion neutron sources.} \label{SimulatedExample}
+\end{figure}
 
 It should be trying to approximate the underlying pattern,
 In deed it does quite well.
 But it's still not perfect.
+Though that doesn't matter too much for our purpose. We deem it as good enough; move on.
 
 \section{Attempt to work on the real data}
+
 IF there's an underlying pattern, it will pick it out.
 It performs just as well.
 
-    \subsection{Data attained}
-    Acquired from the IAEA UKAEA compendium.
-    Rebinning
-    How did you sort it
+\subsection{Data attained}
+Acquired from the IAEA UKAEA compendium.
 
-    \subsection{potential future improvements}
-    In the future we can calculate the spectral index, and plug THOSE values in, instead of plugging in the direct values, it might be better at picking out these differences, because it may be more obvious, and can pick it out even under so few data.
+
+Rebinning
+
+\begin{figure}
+\centering
+\includegraphics[height=5cm]{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/real_fusion_train_spectra.png}
+\caption{The neural networks were trained on 19 fusion neutron spectra, which were all rebinned into the Vitamin-J group structure.}\label{RealFusionTrain}
+\end{figure}
+
+How did you sort it
+
+\begin{figure}
+\centering
+% \includegraphics[height=7cm]{/home/ocean/Documents/GitHubDir/unfolding/unfolding/referencesuite/175_group_test_set/ACT_raw_data/ACT_LogLogCrossSections.png}
+\includegraphics[height=7cm]{PPT/response_matrix.png}
+\caption{Microscopic cross-section values, obtained from TENDL15 via FISPACT-II \cite{FISPACT}, were used as the response function for each of the reaction.} \label{response_matrix}
+\end{figure}
+% No correction factors were applied as this is only a proof-of-concept experiment; applying correction factors that account for the number densities and foil volumes will only multiply the reaction rates by a fixed constant, thus effectively nullifying its effect.
+
+\begin{figure}
+\centering
+\includegraphics[width=15cm]{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/mse_including_folded/fusion-fusion_mse_inc_folded_test_loss.png}
+\caption{By visualizing the loss values attained by each neural network using a heatmap, the neural network which perform the best can be identified. For this particular heatmap, the loss value of the neural network's prediction on the test dataset (a set of fusion spectra that it has never seen before) is visualized, with darker colours representing lower loss values (good performance), vice versa. At the top right hand corner, i.e. the neural network with the hyperparameters of (learning rate=0.01, number of nodes in each layer=[32,53,90,152,256]), a particularly loss value is obtained. Therefore this neural network is regarded as the neural network with the optimal hyperparameter, and further investigation into the predictions of this neural network is conducted to see if it is purely coincidental or not.
+}\label{hyperparametersearchTestLoss}
+\end{figure}
+
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/0918_0332_5_layer_top_right_anomaly_test_001_}
+\caption{}\label{5Layerfusion-fusionJET-FW}
+\end{figure}
+
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/0918_0332_3_layer_typical_mpse_test_001_}
+\caption{While other neural networks struggles to keep a close match to the profile. This neural network is Even though the neural netwrok attempts to follow the general rise-and-fall of the true spectrum, it does not follow the true spectrum's gradient closely enough, leading to extreme discrepancies at some bins (e.g. above 14.1MeV).}\label{3Layerfusion-fusionJET-FW}
+\end{figure}
+
+This shows that Figure~\ref{5Layerfusion-fusionJET-FW} likely only achieves the above average performance serendipiteously by re-tracing the same average spectrum. This hypothesis is supported by it replicating a very similar spectrum when it attempts to deduce the spectra corresponding to the other two test data.
+
+% \begin{figure}
+% \centering
+% \fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/0918_0332_5_layer_top_right_anomaly_test_001_}
+% \caption{}\label{5Layerfusion-fusionWCCB-FW}
+% \end{figure}
+
+% \begin{figure}
+% \centering
+% \fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/0918_0332_5_layer_top_right_anomaly_test_001_}
+% \caption{}\label{5Layerfusion-fusionHCLL-VV}
+% \end{figure}
+
+% \begin{figure}
+% \centering
+% \fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fusion-fusion/0918_0332_5_layer_top_right_anomaly_test_000_}
+% \caption{}\label{5Layerfusion-fusionFNG}
+% \end{figure}
+
+% Regardless, we think it might be useful to make it a 
+
+- What work has been done to find the optimal
+
+- How to quantify optimal
+
+\subsection{potential future improvements}
+1. In the future we can calculate the spectral index, and plug THOSE values in, instead of plugging in the direct values, it might be better at picking out these differences, because it may be more obvious, and can pick it out even under so few data.
+
 \section{Benchmarking against existing codes}
 \subsection{As an unfolding tool}
 If they would like to use it directly as an unfolding tool, then they can incorperate the whole folding process into the loss function; but this method requires:
@@ -394,28 +496,53 @@ If they would like to use it directly as an unfolding tool, then they can incorp
 The more exciting aspect arises from the fact that it can be used as an a priori generator code:
 \subsection{As an a priori generator}
 Can be used as the a priori generator when:
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realinputEarlyStopping/comparison/real_fusion_test_gravel_nn_a_priori_test_001_}
+\caption{But it also sucks as an a priori generator, giving a loss value of 9.89936, which is only a marginal improvement on the 10.188233 stated in Figure~\ref{gravel_flat_a_priori_JET}}\label{gravel_nn_a_priori_JET}
+\end{figure}
+
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realinputEarlyStopping/comparison/real_fusion_test_gravel_test_001_}
+\caption{Which is even worse than naive prior, i.e. using a flat a priori and thus giving no meaningful information to gravel before unfolding. In this case it achieves an average mean squared error of 10.188233}\label{gravel_flat_a_priori_JET}
+\end{figure}
+
 \begin{itemize}
     \item the user doesn't want to commit to hours of MCNP model generation (cite a paper where Lee Packer's group has used a whole MCNP model to get the response matrix and the reaction rates);
     \item and already has a few similar neutron spectra to pick from;
     \item want a higher reproducibility/credibility than hand-drawing an a priori with reference to the previous spectra/ averaging over the existing spectra.
 \end{itemize}
 
-
-\section{How to infer the uncertainty ($\sigma$) associated with the neural network's prediction}
-\begin{itemize}
-    \item Monte Carlo method
-    \item Morris method
-    \item variance-based sensitivity analysis
-\end{itemize}
 EVEN if the response matrix is not known.
-*Is the response matrix basically the covariance matrix between the label and the feature???
 
-But a more involved derivation using 
-\begin{itemize}
-    \item Bayesian Neural Network
-\end{itemize}
 Allows for a probability distribution of weights? does that account for the variance and covariance between the labels and features? *
 But this is beyond the scope of this paper, which is to demonstrate that the idea of NN works.
+
+\section{An attempt at using fission data to predict fusion data}
+Explain why: we have so many fission spectra... but only very few fusion spectra
+
+But even the best neural network trained on fission spectra and obtained the lowest loss value when tested on fusion spectra gave very poor results:
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fission-fusion/0918_0325_5_layer_test_mse_1_test_016_}
+\caption{loss value still average to 43.33816909790039} \label{fission-fusionBad}
+\end{figure}
+
+\begin{figure}
+\centering
+\fluenceandactivities{/home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/realoutputEarlyStopping/SelectedNNreplicated/fission-fusion/0918_0325_5_layer_test_mse_1_test_006_}
+\caption{the best one looks like this}\label{fission-fusionGood}
+\end{figure}
+
+For the record, this optimal neural network has the hyperparameters of (learning rate = 0.01, number of nodes in each layer=[32,53,90,152,256]).
+
+\section{Future improvements}
+\begin{itemize}
+    \item Transfer learning: start with fission data, fix the weights of the second half of the matrix as it gives the connection
+    \item Use RBF NN or GRNN, which are known to perform better under low sample number conditions, though it is more complicated to implement.
+    \item infer the uncertainty ($\sigma$) associated with the neural network's prediction using Monte Carlo method
+\end{itemize}
 
 \section{Conclusion}
 \begin{itemize}
@@ -430,7 +557,6 @@ But this is beyond the scope of this paper, which is to demonstrate that the ide
 \bibliographystyle{plain}
 \bibliography{FACTIUNN}
 
-% These python listings takes a significant amount of time to compile, so I will not uncomment them until the last time I compile the file.
 \begin{appendices}
 
 \section{Neural network building functions tailored for the purpose of neutron spectrum unfolding}
