Routine sync-ing up of my files with the remote.

--- a/FACTIUNN.tex
+++ b/FACTIUNN.tex
@@ -385,7 +385,7 @@ But once we take log of both sides, it's become an impossible problem because we
 \includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/14simple_log.png}\\
 \includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/15simple_log.png}
 \includegraphics[height=3cm]{/home/ocean/Documents/PTNR/CulhamFusion/Presentation2/FewChannels_fullydetermined/16simple_log.png}
-\caption{The spectra predicted from results of training a 2-hidden-layers neural network (with 16 nodes per layer) } \label{5x5}
+\caption{The spectra predicted by a 2-hidden-layers neural network (with 16 nodes per layer) on a fully determined system.} \label{5x5}
 % See /home/ocean/Documents/GitHubDir/unfolding/unfolding/unfoldingsuite/neuralnetwork/simplecase/log_simple_2_layer_error_variation.png for training progress graph
 \end{figure}
 
